# c2sync

./: .gitignore  README.md  agent-summary.md  pyproject.toml  requirements.txt
c2sync/: __init__.py  connector.py  diff_engine.py  differ.py  git_ops.py  logger.py  main.py  models.py  project_manager.py  serial_interface.py  state_engine.py  watcher.py
c2sync/tests/: conftest.py  constants.py  test_c2sync.py  test_differ.py  test_integration.py
c2sync/tests/mocks/: mock_device.py
